header and footer - background and text colors changed

--- a/sport-events-app/src/app/footer/footer.component.css
+++ b/sport-events-app/src/app/footer/footer.component.css
@@ -5,5 +5,5 @@ footer {
     font-weight: 600;
     font-size: 0.9rem;
     color: #fff;
-    background-color: rgb(128, 192, 247);
+    background-color: #22371d;
 }
