home page - html and css added

--- a/sport-events-app/src/app/main/home-page/home-page.component.html
+++ b/sport-events-app/src/app/main/home-page/home-page.component.html
@@ -1,8 +1,8 @@
 <div class="home-page-container">
-    <div>
-        <p></p>
+    <div class="home-page-welcome-message">
+        <h1>Many sport events available almost every day</h1>
     </div>
-    <div>
-
+    <div class="home-page-see-events">
+        <p>See all active sport events</p>
     </div>
 </div>
