--- a/sport-events-app/src/app/header/header.component.css
+++ b/sport-events-app/src/app/header/header.component.css
@@ -1,12 +1,16 @@
 header {
     display: flex;
     align-items: center;
-    padding: 20px;
+    padding: 15px;
     color: #fff;
     background-color:#22371d;
 }
 
 header > h3 {
+    font-family: "Pacifico", cursive;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 1.5rem;
     flex: 0 0 60%;
 }
 
