home component updated and a picture added to the assets folder

--- a/sport-events-app/src/app/main/home-page/home-page.component.html
+++ b/sport-events-app/src/app/main/home-page/home-page.component.html
@@ -3,14 +3,14 @@
     <h1>Many sport events available almost every day</h1>
   </div>
   <div class="home-page-see-events">
-    <!-- <p>See all active sport events</p> -->
+    <p>See all active sport events</p>
 
-    <p>
+    <!-- <p>
       @for (light of lights; track $index) {
 
       <li>{{ light.name }}</li>
 
       }
-    </p>
+    </p> -->
   </div>
 </div>
