--- a/sport-events-app/src/app/app.component.html
+++ b/sport-events-app/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="app-container">
   <app-header />
-  <app-main />
+  <main>
+    <router-outlet />
+  </main>
   <app-footer />
 </div>
-
-<router-outlet />
