header component - routerLinks added and styles updated

--- a/sport-events-app/src/app/header/header.component.css
+++ b/sport-events-app/src/app/header/header.component.css
@@ -19,3 +19,8 @@ header > ul {
     flex: 0 0 40%;
     justify-content: space-between;
 }
+
+header a:hover {
+    cursor: pointer;
+    color: antiquewhite;
+}
