--- a/sport-events-app/src/app/header/header.component.html
+++ b/sport-events-app/src/app/header/header.component.html
@@ -1,9 +1,9 @@
 <header>
-    <h3>Sport Events</h3>
+    <h3><a routerLink="/home">Sport Events</a></h3>
     <ul>
-        <li><a href="#">All Events</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Login</a></li>
-        <li><a href="#">Register</a></li>
+        <li><a routerLink="/all-events">All Events</a></li>
+        <li><a routerLink="/about">About</a></li>
+        <li><a routerLink="/login">Login</a></li>
+        <li><a routerLink="/register">Register</a></li>
     </ul>
 </header>
