--- a/sport-events-app/src/app/login-page/login-page.component.html
+++ b/sport-events-app/src/app/login-page/login-page.component.html
@@ -1,1 +1,17 @@
-<p>login-page works!</p>
+<div class="login-page-containter">
+  <form class="login-form">
+    <h2>Login</h2>
+
+    <p class="login-label-input">
+      <label for="email">Email:</label>
+      <input type="text" id="email" />
+    </p>
+
+    <p class="login-label-input">
+      <label for="password">Password:</label>
+      <input type="text" id="password" />
+    </p>
+
+    <p class="link-to-register">If you are already registered <a>click here</a>!</p>
+  </form>
+</div>
