--- a/sport-events-app/src/styles.css
+++ b/sport-events-app/src/styles.css
@@ -12,3 +12,84 @@ a {
 ul {
     list-style-type: none;
 }
+
+app-home-page, app-login-page, app-register-page, app-event-details-page {
+    flex-grow: 1;
+    min-height: 100%;
+}
+
+app-login-page, app-register-page, app-event-details-page {
+    padding: 20px 0;
+}
+
+.login-register-page-containter {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.login-register-form {
+    font-size: 1.2rem;
+    padding: 50px;
+    color: #FFF;
+    background-color: #968888;
+    border-radius: 5px;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+}
+
+.login-register-form > h2 {
+    margin-bottom: 20px;
+    text-align: center;
+    text-transform: uppercase;
+}
+
+.login-register-label-input {
+    display: flex;
+    justify-content: space-between;
+    gap: 10px;
+}
+
+.login-register-label-input > input {
+    width: 250px;
+    padding: 2px;
+}
+
+.login-register-form > button {
+    width: 50%;
+    align-self: center;
+    margin-top: 10px;
+    padding: 10px;
+    text-transform: uppercase;
+    color: #FFF;
+    background-color: #22371d;
+    border: none;
+    border-radius: 10px;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+
+.login-register-form > button:hover {
+    cursor: pointer;
+    color: #22371d;
+    background-color: #FFF;
+    border: none;
+}
+
+.link-to-login-register {
+    margin-top: 10px;
+    font-size: 0.9rem;
+    text-align: center;
+}
+
+.link-to-login-register > a {
+    color: antiquewhite;
+}
+
+.link-to-login-register > a:hover {
+    cursor: pointer;
+    color: #22371d;
+}
