--- a/sport-events-app/src/app/event-details-page/event-details-page.component.css
+++ b/sport-events-app/src/app/event-details-page/event-details-page.component.css
@@ -1,8 +1,11 @@
 .event-page-container {
-    margin: 20px;
+    width: 100%;
+    height: 100%;
+    padding: 0 20px;
     display: flex;
     flex-direction: column;
     gap: 20px;
+    justify-content: center;
 }
 
 .event-page-container > h2 {
