--- a/sport-events-app/src/app/home-page/home-page.component.css
+++ b/sport-events-app/src/app/home-page/home-page.component.css
@@ -1,9 +1,7 @@
 .home-page-container {
-    position: absolute;
-    top: 0;
-    left: 0;
     width: 100%;
     height: 100%;
+    padding: 20px;
     background-image: url('./images/pexels-pixabay-163444.jpg');
     background-size: cover;
     background-repeat: no-repeat;
