error-page - html added

--- a/sport-events-app/src/app/error-page/error-page.component.html
+++ b/sport-events-app/src/app/error-page/error-page.component.html
@@ -1,1 +1,6 @@
-<p>error-page works!</p>
+<div class="error-page-container">
+  <h3>Page not found!</h3>
+  <div>
+    <a routerLink="/all-events">Go to <span>All Events</span></a>
+  </div>
+</div>
