--- a/sport-events-app/src/styles.css
+++ b/sport-events-app/src/styles.css
@@ -13,7 +13,7 @@ ul {
     list-style-type: none;
 }
 
-app-home-page, app-login-page, app-register-page, app-event-details-page {
+app-home-page, app-login-page, app-register-page, app-event-details-page, app-error-page {
     flex-grow: 1;
     min-height: 100%;
 }
