app component has the correct structure

--- a/sport-events-app/src/app/app.component.html
+++ b/sport-events-app/src/app/app.component.html
@@ -1,5 +1,9 @@
 <app-authenticate>
-  <app-header />
-  <router-outlet />
-  <app-footer />
+  <div class="app-container">
+    <app-header />
+    <main>
+      <router-outlet />
+    </main>
+    <app-footer />
+  </div>
 </app-authenticate>
