--- a/sport-events-app/src/app/core/footer/footer.component.css
+++ b/sport-events-app/src/app/core/footer/footer.component.css
@@ -1,12 +1,9 @@
-/* footer  */
-
 footer {
-  display: flex;
-  align-items: center;
-  justify-content: space-evenly;
-  background-color: #234465;
-  height: 8vh;
-  color: white;
-  text-shadow: 1px 1px black;
+  padding: 15px;
   text-align: center;
+  text-transform: uppercase;
+  font-weight: 600;
+  font-size: 0.9rem;
+  color: #fff;
+  background-color: #22371d;
 }
