--- a/sport-events-app/src/app/core/footer/footer.component.html
+++ b/sport-events-app/src/app/core/footer/footer.component.html
@@ -1,7 +1,1 @@
-<footer>
-  <p>
-    This site is designed to be used for training purposes at SoftUni. Angular
-    course Copyright &copy 2024
-  </p>
-  <p></p>
-</footer>
+<footer>&copy; Sport Events App created by Krasen Boychev</footer>
