--- a/sport-events-app/src/app/core/header/header.component.html
+++ b/sport-events-app/src/app/core/header/header.component.html
@@ -1,40 +1,23 @@
 <header>
-  <div class="mini-navbar-wrap">
-    <div class="logo-wrap">
-      <img src="logo.png" />
-      <p class="logo"><span class="logo">SoftUni Forum</span></p>
-    </div>
-    <div class="mini-navbar">
-      <ul>
-        @if(isLoggedIn){
-        <li class="user-profile-btn">
-          <a routerLink="/profile">{{ username }}'s profile</a>
-        </li>
-        <li>
-          <a (click)="logout()">Logout</a>
-        </li>
-        } @else {
-        <li>
-          <a routerLink="/login">Login</a>
-        </li>
-        <li>
-          <a routerLink="/register">Register</a>
-        </li>
-        }
-      </ul>
-    </div>
-  </div>
-  <nav>
-    <ul>
-      <li>
-        <a routerLink="/home">Home</a>
+  <h3><a routerLink="/home">Sport Events</a></h3>
+  <ul>
+    <li><a routerLink="/all-events">All Events</a></li>
+    <li><a routerLink="/add-event">Add Event</a></li>
+    <li><a routerLink="/about">About</a></li>
+    @if(isLoggedIn){
+      <li class="user-profile-btn">
+        <a routerLink="/profile">{{ username }}'s Profile</a>
       </li>
       <li>
-        <a routerLink="/themes">Themes</a>
+        <a (click)="logout()">Logout</a>
+      </li>
+      } @else {
+      <li>
+        <a routerLink="/login">Login</a>
       </li>
       <li>
-        <a routerLink="/add-theme">New Theme</a>
+        <a routerLink="/register">Register</a>
       </li>
-    </ul>
-  </nav>
+      }
+  </ul>
 </header>
