home component has the correct structure, styles and logic

--- a/sport-events-app/src/app/home/home.component.css
+++ b/sport-events-app/src/app/home/home.component.css
@@ -1,59 +1,58 @@
-/* welcome component */
-
-.welcome {
-  padding: 0.5em 1em;
-  border: 1px solid #999;
-  border-radius: 0.5em;
-  font-size: 0.9em;
-  margin-top: 1em;
-  background-color: #e4e3e3; /* Matches body background */
-}
-
-.welcome h3 {
-  background-color: #234465;
-  color: white;
-  text-shadow: 1px 1px rgb(43, 42, 42);
-  border-radius: 0.5em;
+.home-page-container {
   width: 100%;
-  padding: 0.5em 1.2em;
-  text-align: center;
-}
-
-.welcome p {
-  padding: 1em;
-  border-bottom: 1px solid #999;
-  font-style: italic;
-  color: #333; /* Darker text for readability */
-}
-
-.welcome a {
-  color: white;
-  text-decoration: none;
-  background-color: #ff9f00;
-  border: none;
-  border-radius: 0.5em;
-  padding: 0.5em 2em;
-  margin: 1em;
-  display: inline-block;
-  text-align: center;
-  text-shadow: 1px 1px rgb(87, 86, 86);
-  transition: transform 0.3s ease;
-}
-
-.welcome a:hover {
-  cursor: pointer;
-  transform: scale(1.05);
-}
-
-.welcome ul {
+  height: 100%;
+  padding: 20px;
+  background-image: url('./images/pexels-pixabay-163444.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
   display: flex;
-  justify-content: space-evenly;
-  padding: 0;
-  margin: 1.5em 0;
+  flex-direction: column;
 }
 
-.welcome li {
-  list-style: none;
-  font-size: 1em;
-  color: #234465;
+.home-page-welcome-message, .home-page-see-events {
+  flex: 0 0 50%;
+  display: flex;
+  align-items: center;
+}
+
+.home-page-welcome-message > h1{
+  margin: auto;
+  width: 80%;
+  padding: 50px;
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 1.8rem;
+  letter-spacing: 1.5px;
+  color: #fff;
+  background-color: #968888;
+  border-radius: 20px;
+}
+
+.home-page-see-events > p {
+  position: relative;
+  margin: auto;
+  width: 30%;
+  padding: 30px;
+  text-align: center;
+  text-transform: uppercase;
+  font-weight: 900;
+  letter-spacing: 1px;
+  color: #fff;
+  background-color: #3d2d2d;
+  border-radius: 20px;
+}
+
+.home-page-see-events > p > a {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  align-content: space-evenly;
+}
+
+.home-page-see-events > p:hover {
+  cursor: pointer;
+  color: #000;
+  background-color: #fff;
 }
