--- a/sport-events-app/src/app/home/home.component.html
+++ b/sport-events-app/src/app/home/home.component.html
@@ -1,31 +1,8 @@
-<div class="container">
-  <div class="container">
-    <div class="welcome">
-      <h3>Welcome!</h3>
-      <p>
-        SoftUni forum is a place, where you can post your questions, comment,
-        and discuss problems, which you have in your programming language or in
-        your study in SoftUni.
-      </p>
-
-      @if(!isLoggedIn) {
-      <div class="logged">
-        <ul>
-          <li>
-            <a routerLink="/login">
-              <i class="fas fa-sign-in-alt"></i>
-              Login
-            </a>
-          </li>
-          <li>
-            <a routerLink="/register">
-              <i class="fas fa-user-plus"></i>
-              Register
-            </a>
-          </li>
-        </ul>
-      </div>
-      }
-    </div>
+<div class="home-page-container">
+  <div class="home-page-welcome-message">
+    <h1>Many sport events available almost every day</h1>
+  </div>
+  <div class="home-page-see-events">
+    <p><a routerLink="/all-events">See all active sport events</a></p>
   </div>
 </div>
