--- a/sport-events-app/src/app/theme/current-theme/current-theme.component.html
+++ b/sport-events-app/src/app/theme/current-theme/current-theme.component.html
@@ -1,7 +1,7 @@
-<div class="container">
-  <!-- theme content  -->
+<!-- <div class="container">
+  theme content 
   <div class="theme-content">
-    <!-- theme-title  -->
+    theme-title 
 
     @if(!isLoggedIn){
     <app-home />
@@ -18,13 +18,13 @@
           <p>
             Subscribers: <span>{{ theme.subscribers.length || 0 }}</span>
           </p>
-          <!-- <button class="subscribe">Subscribe</button>
-                    <button class="unsubscribe">Unsubscribe</button> -->
+          <button class="subscribe">Subscribe</button>
+                    <button class="unsubscribe">Unsubscribe</button>
         </div>
       </div>
     </div>
 
-    <!-- comment  -->
+    comment 
 
     @for (post of theme.posts; track $index) {
     <div class="comment">
@@ -45,8 +45,8 @@
         </div>
       </div>
       <div class="footer">
-        <!-- <i class="fas fa-thumbs-up"></i>
-                <i class="fas fa-thumbs-down"></i> -->
+        <i class="fas fa-thumbs-up"></i>
+                <i class="fas fa-thumbs-down"></i>
         <p>
           <span>{{ post.likes.length || 0 }}</span> likes
         </p>
@@ -67,4 +67,4 @@
     </div>
     }
   </div>
-</div>
+</div> -->
