themes-list component tested with new values

--- a/sport-events-app/src/app/theme/themes-list/themes-list.component.html
+++ b/sport-events-app/src/app/theme/themes-list/themes-list.component.html
@@ -3,31 +3,37 @@
   <app-loader />
   }@else {
   <div class="theme-title">
-    @for (theme of themes; track $index) {
+    @for (event of events; track $index) {
     <div class="theme-container">
       <div class="theme-name-wrapper">
         <div class="theme-name">
-          <a [routerLink]="theme._id" class="normal">
-            <h2>{{ theme.themeName | slice : 25 }}</h2>
+          <a [routerLink]="event._id" class="normal">
+            <h2>{{ event.name | slice : 25 }}</h2>
           </a>
           <div class="columns">
             <div>
               <p>
                 Date:
                 <time>{{
-                  theme.created_at | date : "yyyy-mm-dd hh:mm:ss"
+                  event.date | date : "yyyy-mm-dd"
+                }}</time>
+              </p>
+              <p>
+                Time:
+                <time>{{
+                  event.time
                 }}</time>
               </p>
               <div class="nick-name">
                 <p>
-                  Username: <span>{{ theme.userId.username }}</span>
+                  Username: <span>{{ event.ownerId }}</span>
                 </p>
               </div>
             </div>
             <div class="subscribers">
               <!-- <button class="subscribe">Subscribe</button> -->
               <p>
-                Subscribers: <span>{{ theme?.subscribers?.length || 0 }}</span>
+                Subscribers: <span>{{ event?.usersJoined?.length || 0 }}</span>
               </p>
             </div>
           </div>
