--- a/sport-events-app/src/app/user/login/login.component.html
+++ b/sport-events-app/src/app/user/login/login.component.html
@@ -1,23 +1,18 @@
-<!-- homepage -->
-<div class="container">
-  <form class="login" #form="ngForm" (ngSubmit)="login(form)">
-    <fieldset>
-      <h2>Login Form</h2>
+<div class="login-register-page-containter">
+  <form class="login-register-form" #form="ngForm" (ngSubmit)="login(form)">
+    <h2>Login</h2>
 
-      <p class="field field-icon">
-        <label for="email"
-          ><span><i class="fas fa-envelope"></i></span
-        ></label>
-        <!-- class="input-error" -->
+    <section class="login-register-sections">
+      <p class="login-register-label-input">
+        <label for="email">Email:</label>
         <input
           [class]="(
-            (inputEmail?.touched && inputEmail?.errors?.['required']) || 
-             (inputEmail?.touched && inputEmail?.errors?.['emailValidator']))
-             ? 'input-error': ''"
+        (inputEmail?.touched && inputEmail?.errors?.['required']) || 
+         (inputEmail?.touched && inputEmail?.errors?.['emailValidator']))
+         ? 'input-error': ''"
           type="email"
           name="email"
           id="email"
-          placeholder="john.doe@gmail.com"
           ngModel
           #inputEmail="ngModel"
           required
@@ -28,28 +23,27 @@
       @if(inputEmail?.touched){
       <div>
         @if(inputEmail?.errors?.['required']){
-        <p class="error">Email is required!</p>
+        <p class="input-error-msg">Email is required!</p>
         }
         <!--  -->
         @if(inputEmail?.errors?.['emailValidator']){
-        <p class="error">Email is not valid!</p>
+        <p class="input-error-msg">Email is not valid!</p>
         }
       </div>
       }
+    </section>
 
-      <p class="field field-icon">
-        <label for="password"
-          ><span><i class="fas fa-lock"></i></span
-        ></label>
+    <section class="login-register-sections">
+      <p class="login-register-label-input">
+        <label for="password">Password:</label>
         <input
           [class]="(
-          (inputPassword?.touched && inputPassword?.errors?.['required']) || 
-           (inputPassword?.touched && inputPassword?.errors?.['minlength']))
-           ? 'input-error': ''"
+        (inputPassword?.touched && inputPassword?.errors?.['required']) || 
+         (inputPassword?.touched && inputPassword?.errors?.['minlength']))
+         ? 'input-error': ''"
           type="password"
           name="password"
           id="password"
-          placeholder="******"
           ngModel
           #inputPassword="ngModel"
           minlength="5"
@@ -60,26 +54,29 @@
       @if(inputPassword?.touched){
       <div>
         @if(inputPassword?.errors?.['required']){
-        <p class="error">Password is required!</p>
+        <p class="input-error-msg">Password is required!</p>
         }
         <!--  -->
         @if(inputPassword?.errors?.['minlength']){
-        <p class="error">Password must be at least 5 characters!</p>
+        <p class="input-error-msg">Password must be at least 5 characters!</p>
         }
       </div>
       }
+    </section>
 
-      <button
-        [disabled]="form.invalid"
-        [style]="{ backgroundColor: form.invalid ? 'grey' : '#234465' }"
-      >
-        Login
-      </button>
+    <button
+      [disabled]="form.invalid"
+      [class]="
+        form.invalid
+          ? 'login-register-disabled-btn'
+          : 'login-register-enabled-btn'
+      "
+    >
+      Login
+    </button>
 
-      <p class="text-center">
-        Have an account?
-        <a routerLink="/register">Register</a>
-      </p>
-    </fieldset>
+    <p class="link-to-login-register">
+      If you are already registered <a routerLink="/register">click here</a>!
+    </p>
   </form>
 </div>
