--- a/sport-events-app/src/app/user/profile/profile.component.css
+++ b/sport-events-app/src/app/user/profile/profile.component.css
@@ -1,118 +1,88 @@
-.profile {
+.profile-container {
   width: 100%;
-  max-width: 500px;
-  margin: 2em auto 1rem;
-  padding: 1em;
-  border: 0.3em solid #234465;
-  border-radius: 1em;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  color: #234465;
-  background-color: #e4e3e3;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  text-align: center;
-}
-
-.profile h3 {
-  text-decoration: underline;
-  color: #234465;
-  font-size: 1.5em;
-  margin-bottom: 0.5em;
-}
-
-.profile img {
-  width: 7em;
-  height: 7em;
-  margin: auto;
-  display: block;
-  border-radius: 50%;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-}
-
-.flex {
+  height: 100%;
   display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  gap: 1em;
-  padding: 0.5em;
-}
-
-.flex p:first-child {
-  width: 35%;
-  text-align: right;
-  margin: 0.5em;
-  font-weight: bold;
-  color: #234465;
-}
-
-.flex p:last-child {
-  width: 55%;
-  text-align: left;
-  margin: 0.5em;
-  font-weight: bold;
-  color: #333;
-}
-
-.profile button {
-  background-color: #234465;
-  color: white;
-  border: none;
-  border-radius: 0.5em;
-  padding: 0.6em 1.5em;
-  margin-top: 1em;
-  outline: none;
-  cursor: pointer;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  transition: transform 0.3s ease;
-}
-
-.profile button:hover {
-  transform: scale(1.05);
-}
-
-.flex > input,
-.flex > div {
-  width: 55%;
-  text-align: left;
-  margin: 0.5em;
-}
-
-.flex > div > input {
-  width: 90%;
-  padding: 0.4em;
-  border: 1px solid #999;
-  border-radius: 0.3em;
-  box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.1);
-}
-
-.flex select {
-  padding: 0.3em;
-  border: 1px solid #999;
-  border-radius: 0.3em;
-  color: #234465;
-  background-color: #e4e3e3;
-}
-
-.btn-wrapper {
-  display: flex;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
 }
 
-.green-button {
-  background-color: #5cb85c;
-  color: white;
-  border-radius: 0.5em;
-  padding: 0.5em 1.5em;
-  margin-left: 10px;
+.profile-wrapper {
+  font-size: 1.2rem;
+  padding: 50px;
+  color: #FFF;
+  background-color: #968888;
+  border-radius: 5px;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+}
+
+.profile-form-wrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+}
+
+.profile-wrapper > h3 {
+  margin-bottom: 10px;
+  text-align: center;
+  text-transform: uppercase;
+}
+
+.profile-info, .profile-form-info {
+  display: flex;
+  gap: 10px;
+}
+
+.profile-edit-button {
+  background-color: #22371d;
+}
+
+.profile-edit-button:hover {
+  background-color: #FFF;
+}
+
+.profile-form-info {
+  justify-content: space-between;
+}
+
+.profile-form-info > input {
+  width: 250px;
+  padding: 2px;
+}
+
+.profile-info-section {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.profile-btn-wrapper {
+  display: flex;
+  justify-content: space-between;
+  gap: 40px;
 }
 
 .red-button {
-  background-color: #d9534f !important;
-  color: white;
-  border-radius: 0.5em;
-  padding: 0.5em 1.5em;
+  background-color: red;
 }
 
-.error {
-  color: red;
+.grey-disabled-button {
+  background-color: grey;
+}
+
+.grey-disabled-button:hover {
+  cursor: auto;
+  color: #FFF;
+  background-color: grey;
+}
+
+.green-enabled-button {
+  background-color: greenyellow;
+}
+
+
+.green-enabled-button:hover {
+  cursor: pointer;
 }
