--- a/sport-events-app/src/app/user/profile/profile.component.html
+++ b/sport-events-app/src/app/user/profile/profile.component.html
@@ -1,98 +1,94 @@
-<!-- homepage -->
-<div class="container">
-  <div class="profile">
-    <img src="./profile.png" alt="default user" />
+<div class="profile-container">
+  <div class="profile-wrapper">
     <h3>User Info:</h3>
-
-    <!-- READONLY MODE -->
 
     @if(!isEditMode){
     <ng-container>
-      <div class="flex">
+      <div class="profile-info">
         <p>Username:</p>
         <p>{{ profileDetails.username }}</p>
       </div>
-      <div class="flex">
+      <div class="profile-info">
         <p>Email:</p>
         <p>{{ profileDetails.email }}</p>
       </div>
-      <div class="flex">
-        <p>Phone:</p>
-        <p>{{ profileDetails.tel }}</p>
-      </div>
-      <button class="edit-button" (click)="toggleEditMode()">Edit</button>
+      <button class="profile-edit-button" (click)="toggleEditMode()">
+        Edit
+      </button>
     </ng-container>
     } @else {
     <!-- EDIT MODE -->
     <ng-container>
-      <form [formGroup]="form" (ngSubmit)="handleSaveProfile()">
-        <div class="flex">
-          <p>Username:</p>
-          <input
-            type="text"
-            name="username"
-            id="username"
-            value="Johny"
-            formControlName="username"
-          />
-        </div>
-        @if(form.get('username')?.touched){
-        <div>
+      <form
+        class="profile-form-wrapper"
+        [formGroup]="form"
+        (ngSubmit)="handleSaveProfile()"
+      >
+        <section class="profile-info-section">
+          <div class="profile-form-info">
+            <p>Username:</p>
+            <input
+              type="text"
+              name="username"
+              id="username"
+              formControlName="username"
+            />
+          </div>
+          @if(form.get('username')?.touched){
           @if(form.get('username')?.errors?.['required']){
-          <p class="error">Username is required!</p>
+          <div>
+            <p class="input-error-msg">Username is required!</p>
+          </div>
           }
           <!--  -->
           @if(form.get('username')?.errors?.['minlength']){
-          <p class="error">Username must be at least 5 characters!</p>
-          }
-        </div>
-        }
+          <div>
+            <p class="input-error-msg">
+              Username must be at least 5 characters!
+            </p>
+          </div>
+          } }
+        </section>
 
-        <div class="flex">
-          <p>Email:</p>
-          <input
-            type="email"
-            name="email"
-            id="email"
-            value="john.doe@gmail.com"
-            formControlName="email"
-          />
-        </div>
+        <section class="profile-info-section">
+          <div class="profile-form-info">
+            <p>Email:</p>
+            <input
+              type="email"
+              name="email"
+              id="email"
+              formControlName="email"
+            />
+          </div>
 
-        @if(form.get('email')?.touched){
-        <div>
+          @if(form.get('email')?.touched){
           @if(form.get('email')?.errors?.['required']){
-          <p class="error">Email is required!</p>
+          <div>
+            <p class="input-error-msg">Email is required!</p>
+          </div>
           }
           <!--  -->
           @if(form.get('email')?.errors?.['emailValidator']){
-          <p class="error">Email is not valid!</p>
-          }
-        </div>
-        }
-
-        <div class="flex">
-          <p>Phone:</p>
           <div>
-            <select name="select-tel" id="select-tel" class="tel">
-              <option value="00359">+359</option>
-            </select>
-            <input
-              type="text"
-              name="tel"
-              id="tel"
-              value="885 888 888"
-              formControlName="tel"
-            />
+            <p class="input-error-msg">Email is not valid!</p>
           </div>
-        </div>
+          } }
+        </section>
 
-        <div class="btn-wrapper">
-          <button class="red-button" (click)="onCancel($event)">Cancel</button>
+        <div class="profile-btn-wrapper">
           <button
-            class="green-button"
+            class="profile-edit-button red-button"
+            (click)="onCancel($event)"
+          >
+            Cancel
+          </button>
+          <button
             [disabled]="form.invalid"
-            [style]="{ backgroundColor: form.invalid ? 'grey' : '#5cb85c' }"
+            [class]="
+              form.invalid
+                ? 'profile-edit-button grey-disabled-button'
+                : 'profile-edit-button green-enabled-button'
+            "
           >
             Save
           </button>
