--- a/sport-events-app/src/styles.css
+++ b/sport-events-app/src/styles.css
@@ -13,16 +13,16 @@ ul {
   list-style-type: none;
 }
 
-app-home, app-all-events, app-login, app-register, app-profile, app-single-event, app-error-page {
+app-home, app-all-events, app-login, app-register, app-profile, app-single-event, app-add-event, app-error-page {
   flex-grow: 1;
   min-height: 100%;
 }
 
-app-login, app-register, app-profile,  app-single-event {
+app-login, app-register, app-profile, app-single-event, app-add-event {
   padding: 20px 0;
 }
 
-.login-register-page-containter {
+.login-register-page-containter, .add-event-container {
   width: 100%;
   height: 100%;
   display: flex;
@@ -30,7 +30,7 @@ app-login, app-register, app-profile,  app-single-event {
   justify-content: center;
 }
 
-.login-register-form {
+.login-register-form, .add-event-form {
   font-size: 1.2rem;
   padding: 50px;
   color: #FFF;
@@ -48,30 +48,30 @@ app-login, app-register, app-profile,  app-single-event {
   gap: 30px;
 }
 
-.login-register-sections {
+.login-register-sections, .add-event-sections {
   display: flex;
   flex-direction: column;
   gap: 10px;
 }
 
-.login-register-form > h2 {
+.login-register-form > h2, .add-event-form > h2 {
   margin-bottom: 20px;
   text-align: center;
   text-transform: uppercase;
 }
 
-.login-register-label-input {
+.login-register-label-input, .add-event-label-input {
   display: flex;
   justify-content: space-between;
   gap: 10px;
 }
 
-.login-register-label-input > input {
+.login-register-label-input > input, .add-event-label-input > input {
   width: 250px;
   padding: 2px;
 }
 
-.login-register-form > button, .profile-edit-button {
+.login-register-form > button, .profile-edit-button, .add-event-form > button {
   width: 50%;
   align-self: center;
   margin-top: 10px;
@@ -83,23 +83,22 @@ app-login, app-register, app-profile,  app-single-event {
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
-.login-register-enabled-btn:hover, .profile-edit-button:hover {
+.login-register-enabled-btn:hover, .profile-edit-button:hover, .add-event-enabled-btn:hover {
   cursor: pointer;
   color: #22371d;
   background-color: #FFF;
   border: none;
 }
 
-
-.login-register-enabled-btn {
+.login-register-enabled-btn, .add-event-enabled-btn {
   background-color: #22371d;
 }
 
-.login-register-disabled-btn {
+.login-register-disabled-btn, .add-event-disabled-btn {
   cursor: auto;
 }
 
-.login-register-disabled-btn {
+.login-register-disabled-btn, .add-event-disabled-btn {
   background-color: #22371d;
 }
 
