descrption renders dinamically

--- a/sport-events-app/src/app/event/single-event/single-event.component.html
+++ b/sport-events-app/src/app/event/single-event/single-event.component.html
@@ -10,12 +10,7 @@
           <p>Time: {{event.time}}</p>
           <p>Place: {{event.place}}</p>
           <p>People joined: {{event.usersJoined ? event.usersJoined.length : 0}}</p>
-          <p>
-            Description: Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            Incidunt at iste asperiores quae nesciunt architecto nostrum dicta
-            corporis deleniti commodi labore, voluptate dolorem possimus aperiam
-            vero facere expedita, deserunt quibusdam.
-          </p>
+          <p>Description: {{ event.description }}</p>
         </div>
         <div class="join-btn">
           <button>Join</button>
