--- a/sport-events-app/src/app/user/login/login.component.html
+++ b/sport-events-app/src/app/user/login/login.component.html
@@ -20,17 +20,15 @@
         />
       </p>
 
-      @if(inputEmail?.touched){
+      @if(inputEmail?.touched){ @if(inputEmail?.errors?.['required']){
       <div>
-        @if(inputEmail?.errors?.['required']){
         <p class="input-error-msg">Email is required!</p>
-        }
-        <!--  -->
-        @if(inputEmail?.errors?.['emailValidator']){
-        <p class="input-error-msg">Email is not valid!</p>
-        }
       </div>
-      }
+      } @if(inputEmail?.errors?.['emailValidator']){
+      <div>
+        <p class="input-error-msg">Email is not valid!</p>
+      </div>
+      } }
     </section>
 
     <section class="login-register-sections">
@@ -51,17 +49,15 @@
         />
       </p>
 
-      @if(inputPassword?.touched){
+      @if(inputPassword?.touched){ @if(inputPassword?.errors?.['required']){
       <div>
-        @if(inputPassword?.errors?.['required']){
         <p class="input-error-msg">Password is required!</p>
-        }
-        <!--  -->
-        @if(inputPassword?.errors?.['minlength']){
-        <p class="input-error-msg">Password must be at least 5 characters!</p>
-        }
       </div>
-      }
+      } @if(inputPassword?.errors?.['minlength']){
+      <div>
+        <p class="input-error-msg">Password must be at least 5 characters!</p>
+      </div>
+      } }
     </section>
 
     <button
