single-event renders Join or Cancel button correctly

--- a/sport-events-app/src/app/event/single-event/single-event.component.html
+++ b/sport-events-app/src/app/event/single-event/single-event.component.html
@@ -19,7 +19,11 @@
           </div>
         } @else {
           <div class="single-event-btn">
-            <button class="event-join-btn">Join</button>
+            @if (hasJoined) {
+              <button class="event-join-btn" (click)="onCancelEvent()">Cancel</button>
+            } @else {
+              <button class="event-join-btn" (click)="onJoinEvent()">Join</button>
+            }
           </div>
         }
         
