app-error-msg component added to app-component.html

--- a/sport-events-app/src/app/app.component.html
+++ b/sport-events-app/src/app/app.component.html
@@ -1,9 +1,14 @@
 <app-authenticate>
   <div class="app-container">
     <app-header />
+
     <main>
       <router-outlet />
+      @if (error) {
+      <app-error-msg />
+      }
     </main>
+
     <app-footer />
   </div>
 </app-authenticate>
