--- a/sport-events-app/src/app/error/error.component.css
+++ b/sport-events-app/src/app/error/error.component.css
@@ -6,7 +6,7 @@
 }
 
 .err {
-  color: #234465;
+  color: #22371d;
   font-family: "Nunito Sans", sans-serif;
   font-size: 11rem;
   position: absolute;
@@ -14,16 +14,8 @@
   top: 8%;
 }
 
-.far {
-  position: absolute;
-  font-size: 8.5rem;
-  left: 42%;
-  top: 15%;
-  color: #234465;
-}
-
 .err2 {
-  color: #234465;
+  color: #22371d;
   font-family: "Nunito Sans", sans-serif;
   font-size: 11rem;
   position: absolute;
@@ -42,10 +34,10 @@
 }
 
 a {
-  text-decoration: none;
-  color: #234465;
+  text-decoration: underline;
+  color: #22371d;
 }
 
 a:hover {
-  text-decoration: underline;
+  color: red;
 }
